--- a/src/components/weather.css
+++ b/src/components/weather.css
@@ -1,10 +1,17 @@
 .weather {
-    margin: 2rem 0;
+    margin: auto;
     border: 3px dashed grey;
     border-radius: 20px;
     padding-bottom: 30px;
     width: max-content;
     padding: 0px 20px 20px 20px;
+
+    /* margin: auto;
+    width: 50%;
+    border: 3px solid green;
+    padding: 10px; */
+
+    
   }
   .weather .title {
     font-size: 4rem;
